--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a id="tabHearth" onclick="tab('hearth')">Hearth</a>
         <a id="tabBuildings" onclick="tab('buildings')">Buildings</a>
         <a id="tabPopulation" onclick="tab('population')">Population</a>
-        <a id="tabPopulation" onclick="tab('research')">Research</a>
+        <a id="tabResearch" onclick="tab('research')">Research</a>
         <a id="tabReset" onclick="reset()">Reset game</a>
         
     </div>
