--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     </div>
                     <p id="pop">Total population: 0/5</p>
                     <p id="workers">Total amount of workers: 0</p>
-                    <p>Food usage: 0/s</p>
+                    <p id="foodUsage">Food usage: 0/s</p>
                     
                 </div>
 
