011 - fixes, added icons, research in progress

--- a/index.html
+++ b/index.html
@@ -68,9 +68,11 @@
                 <div class="pageContent" id="researchContent">
                     <div class="column">
                         <h2>available research</h2>
+                        <div id="researchAvailable"></div>
                     </div>
                     <div class="column">
                         <h2>completed</h2>
+                        <div id="researchCompleted"></div>
                     </div>
                 </div>
             </div>
